[package]
name = "snapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
log = "0.4"
notify = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
simple_logger = "2"
